Remove OSHA chart, fix heading going outside photo on tablet views

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,6 @@ body {
     display:none;
 }
 .opener {
-    height: 100%;
     width: 100%;
     overflow: hidden;
     position: relative;
